# aio-tg

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  routes.py  service.py  setup.py
app/commands/: start.py
